--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "type": "module",
   "description": "REST service starter for RS School",
-  "main": "src/server.js",
+  "main": "build/server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "build": "tsc",
+    "start": "node build/server.js",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
