--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "main": "build/server.js",
   "scripts": {
     "dev": "nodemon",
-    "start:dev": "node --loader ts-node/esm ./src/server.ts",
+    "start:dev": "node --loader ts-node/esm --es-module-specifier-resolution=node ./src/server.ts",
     "build": "tsc",
-    "start": "node build/server.js",
+    "start": "node --es-module-specifier-resolution=node build/server.js",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
