refactor: config file loggin names

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 # Set your database connection information here
 MONGO_CONNECTION_STRING=your-mongo-db-connection-string
+FILE_LOG_REQUEST=logs/request.log
+FILE_LOG_ERROR=logs/error.log
