--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,15 @@ version: '3'
 services:
   node:
     build: .
-    ports:
-      - ${PORT}:${PORT}
     depends_on:
       - postgres
+    ports:
+      - ${PORT}:${PORT}
     environment:
-      - PORT=4000
+      PORT: ${PORT}
+    volumes:
+      - ./:/app
+      - /app/node_modules
     restart: on-failure
 
   postgres:
@@ -19,4 +22,10 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      PGDATA: /var/lib/postgresql/data/pgdata/
+    volumes:
+      - pgdata:/var/lib/postgresql/data/pgdata/
     restart: on-failure
+
+volumes:
+  pgdata:
