--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3'
 services:
   node:
     build: .
+    networks:
+      - krumiprog-net
     depends_on:
       - postgres
     ports:
@@ -10,22 +12,25 @@ services:
     environment:
       PORT: ${PORT}
     volumes:
-      - ./:/app
+      - .:/app
       - /app/node_modules
     restart: on-failure
 
   postgres:
     build: ./database/
+    networks:
+      - krumiprog-net
     ports:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-      PGDATA: /var/lib/postgresql/data/pgdata/
+      PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - pgdata:/var/lib/postgresql/data/pgdata/
+      - ./pgdata:/var/lib/postgresql/data/pgdata
     restart: on-failure
 
-volumes:
-  pgdata:
+networks:
+  krumiprog-net:
+    driver: bridge
