feat: create migration

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 FILE_LOG_REQUEST=logs/request.log
 FILE_LOG_ERROR=logs/error.log
+
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=rest_service
-POSTGRES_HOST=localhost
-MONGO_CONNECTION_STRING=your-mongo-db-connection-string
+POSTGRES_DB=postgres
+POSTGRES_HOST=postgres
