--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   "description": "REST service starter for RS School",
   "main": "build/server.js",
   "scripts": {
-    "mydev": "nodemon ./src/server.ts",
-    "dev:local": "nodemon",
-    "dev": "nodemon --legacy-watch \"src/**\" --ext \"ts\" --ignore \"node_modules\" --exec \"npm run start:dev\"",
+    "dev": "nodemon --legacy-watch --exitcrash",
+    "dev:local": "nodemon --legacy-watch \"src/**\" --ext \"ts\" --ignore \"node_modules\" --exec \"npm run start:dev\"",
     "start:dev": "node --loader ts-node/esm --es-module-specifier-resolution=node ./src/server.ts",
     "build": "tsc",
     "start": "node --es-module-specifier-resolution=node build/server.js",
     "lint": "eslint --ext .js,.ts --fix src/",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
     "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
-    "doc": "jsdoc -c jsdoc.json"
+    "doc": "jsdoc -c jsdoc.json",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "keywords": [
     "rs",
