--- a/Dockerfile.node
+++ b/Dockerfile.node
@@ -1,7 +1,7 @@
 FROM node:14.17-alpine
 WORKDIR /app
-COPY package*.json .
+COPY package*.json ./
 RUN npm install
-COPY . .
+COPY . ./
 EXPOSE 4000
 CMD ["npm", "run", "dev"]
