reafctor: login router

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ AUTH_MODE=false
 JWT_SECRET_KEY=secret-key
 FILE_LOG_REQUEST=logs/request.log
 FILE_LOG_ERROR=logs/error.log
+SALT_ROUNDS=5
 
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
