--- a/nest-app/package.json
+++ b/nest-app/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.6.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
