--- a/nest-app/package.json
+++ b/nest-app/package.json
@@ -31,12 +31,14 @@
     "bcrypt": "^5.0.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
+    "nest-winston": "^1.5.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6",
     "typeorm": "^0.2.34",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
