--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "husky": "^7.0.0",
+    "husky": "4.3.8",
     "jest": "^26.6.3",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "10.5.4",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.4",
