--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
